# knxBase

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Thumbs.db  __designRules.txt  __eval.xml  __todo.txt  i1
apps/: CMakeLists.txt  _disasMsg.c  _shmblock.c  app.php  eibconvaddr.c  hdlShades.h  hdleasun.c  hdleasun.h  hdlemh  hdlemh.c  hdlemh.h  hdlheater  hdlheater.c  hdlheating  hdlheating.c  hdlheatpump  hdlheatpump.c  hdllogic  hdllogic.c  hdlpellet  hdlpellet.c  hdlshades  hdlshades.c  hdlsolar  hdlsolar.c  hdlsolar.c.NEW  hdltempmon  hdltempmon.c  hdltime.c  hdltimer  hdltimer.c  hdltimer.h  knxCoreClassTest.cpp  knxbackbone  knxbackbone.c  knxipbridge  knxipbridge.c  knxipbridge.h  knxkill  knxkill.c  (+41 more)
apps-demo/: CMakeLists.txt  demomcc  demomcc.c  demomclisten.c  demomcs  demomcs.c  demomcsend  demomcsend.c  knxipbridged  knxipbridged.c  knxipbridgehd  knxipbridgehd.c
apps-demo/libs/: libeibknxlib.dylib
apps/2beDeleted/: app.css  app.php.old  dialogDiscardData.html  login.html  logout.php  sani Alias  splash.html  vt2.html  vt2getData.php  vt2getData2.php  vt2getNext.php  vt2getPrev.php  vt3.html  vt3get.php
apps/ConceptOffice/WebFrontend/: index.php  login.html  splash.html  splash.xml
apps/ConceptOffice/app/: index.php
apps/Tools/: about.php  debugger.html  session.php
apps/_base/ModAdmin/AppOption/: edtAppOption.php  screenAppOption.js  screenAppOption.xml  selAppOption.php
apps/_base/ModAdmin/AppTrans/: screenAppTrans.js  screenAppTrans.xml  selAppTrans.php
apps/_base/ModAdmin/AppUser/: appUser.js  appUser.xml
apps/_base/ModAdmin/AuthObject/: authObject.js  authObject.xml
apps/_base/ModAdmin/DatabaseTable/: databaseTable.js  databaseTable.xml
apps/_base/ModAdmin/Profile/: edtProfileAuthObject.xml  profile.js  profile.xml
apps/_base/ModAdmin/Role/: edtRoleProfile.xml  role.js  role.xml
apps/_base/ModAdmin/UI_Screen/: UI_Screen.js  UI_Screen.xml
apps/_base/ModOperator/ApplicationSystem/: applicationSystem.js  applicationSystem.xml
apps/_base/ModOperator/Client/: client.js  client.xml
apps/_base/ModOperator/ClientApplication/: clientApplication.js  clientApplication.xml
apps/crm/be/: dialogDiscardData.html  index.php  splash.html  splash.xml
apps/erm.NEW/_RELEASES/erp/: _-_-phpinfo.php  rd.txt  splash.html
apps/erm.NEW/erp/: _dumpReq.php  dialogDiscardData.html  index.php  login.html
apps/erm.NEW/erp/ModCore/: core.php
apps/erm.NEW/erp/UserGuide/: appCustomerInvoice.html
apps/erm.NEW/erp/test/: testDb-01.php
apps/erm.NEW/rsrc/sql/: scripts.sql  views.sql
apps/erm.NEW/shop/: StileR2.css
apps/erm.NEW/shop/htmlMan/: Artikelsuche.php  Bestellen.php  frag_kunde.php  iframeset.php  infoKundeAllgemein.php  infoKundeBestellungen.php  infoKundeMerkzettel.php  infoMerkzettel.php  infoNeueArtikel.html  prnMZ.php  regKunde.php
apps/erm/_RELEASES/erp/: _-_-test-01.php  index.php
apps/erm/erp/: index.php  login.html
apps/erm/erp/js/: ajaxstuff.js
apps/erm/pos/: index.php  mainCashSale.js  mainCashSale.xml
apps/erm/pos/Tools/: about.php
apps/erm/rsrc/sql/: views.sql
apps/erm/shop/: ajaxstuff.js  index.php  ini.php  legal.html  xmlTest.php  xmlTest.xml  xmlTestc.xsl
apps/erm/shop/htmlCode/: .html
apps/erm/shop/htmlMan/: Anfragen.php  _-_-diag.php  aktiviereKunde.php  diag.php  genMZ.php  infoKunde.php  infoKundeAbmeldung.php  infoKundeAnfrage.php  infoKundeAngebot.php  infoKundeKontakte.php  infoKundePasswort.php  mzlibrary.inc.php  npwKunde.php  redirectToPay.php  returnFromGiroPay.php  showMZ.php  suchen.php
apps/frieda/_SQL/: createEntries.sql
apps/frieda/be/: CreateNews.js  DisplayDetailTables.js  GUIElements.js  GetOneDataset.php  Main.css  Main.js  createticket.html  einsatzarten.html  employee.html  employee.php  escalation.html  groups.html  index.php  index_BEARBEITER.html  index_SERVICE.html  index_SUPERVISOR.html  index_SYSADMIN.html  job_erstellen.html  jobs.html  kundendaten.html  lateAppConfig.php  nachrichten.html  owntickets.html  reaction-teams.html  requests.html  statistik.html  tickets.html
apps/frieda/be/icons/: licon.rar
apps/frieda/bekh/: Einsatzart.js  Einsatzart.xml  Mitarbeiter.js  Mitarbeiter.xml  index.php  splash.html  splash.js
apps/immo/man/: dialogWait.html  index.php  login.html  splash.html
apps/immo/man/ModCore/: core.js.php  editor.php
apps/immo/rsrc/sql/: Property.sql  Proprietor.sql  Rentable.sql  RentalContract.sql  initNewCustomer.sql  mas_immo_XXXXXXXX.sql  mas_immo_XXXXXXXX_sys.sql  mas_immo_sys.sql
apps/knx/be/: index.php  lateAppConfig.php  login.php
apps/libs/: libeibknxlib.dylib
apps/mas/mgmt/: dialogDiscardData.html  index.php  lateAppConfig.php  login.html  splash.html  styler.html  sysUser.js  sysUser.xml
apps/mas/rsrc/sql/: views.sql
apps/pdm/: __todo.txt
apps/pdm/rsrc/sql/: rights.sql  tables.sql  views.sql
apps/pdm/svm/: index.php  splash.html
apps/pmp/: __info.txt
apps/rsrc/styles/: Styles.css  wapBasic.css  wapBusy.css  wapGrid.css  wapPopup.css  wapTree.css
apps/sani/_doku/: ERPNrBereiche
apps/sani/api/: index.php
apps/sani/mipSim/: exampleReply.xml  exampleRequest.xml  index.php  mipSim.sql  xmlinterface.php
apps/sani/mipSim/Experimental/: HMVcloud.php  MIPAnhang.php  MIPEigenanteil.php  MIPKostenvoranschlag.php  MIPPosition.php  MIPVersicherter.php  MIPVersorgung.php  MIPZusatzanschrift.php  MIPZuzahlung.php  expClasses.php  khAuftrag.php  khAuftragAdapter.php  khAuftragPosition.php  khAuftragPositionAdapter.php  khAuftragWF.php  khAuftragWFAdapter.php  khClasses.php  khKassenBeleg.php  (+4 more)
apps/sani/office/: index.php  lateAppConfig.php  london.xml  search.php  splash.html
apps/sani/pos/: login.html  rd.txt
apps/sani/rsrc/: web-links.txt
apps/sani/scripts/: loadGKV.php
apps/trm/: __info.txt  calTest.html
apps/trm/be/: index.php  progressBar.html  splash.html
apps/trm/ess/: index.php  login.html  splash.html
apps/util/tilg/: index.php  login.html  splash.html  splash.js  tilgungsPlan.js  tilgungsPlan.xml
apps/vms/mms/: action.php  app.html  app.php  main.js  sectAccount.html  sectMember.html  vt3get.php
(+1756 files in other folders)
