include_directories( AFTER /usr/local/Cellar/openssl/1.0.2e/include ../libs ${MariaDBClient_INCLUDE_DIR})
link_directories( /usr/local/Cellar/openssl/1.0.2e/lib)

add_executable ( knxbackbone knxbackbone.c eiblog.c knxlog.c)
add_executable ( knxps knxps.c eiblog.c knxlog.c)
add_executable ( knxkill knxkill.c eiblog.c knxlog.c)
add_executable ( knxtpbridge knxtpbridge.c eiblog.c knxlog.c)
add_executable ( knxipbridge knxipbridge.c eiblog.c knxlog.c)
add_executable ( knxmqttbridge knxmqttbridge.c eiblog.c knxlog.c)
add_executable ( knxmqttbridge2 knxmqttbridge2.c eiblog.c knxlog.c ${MOSQUITTO_LIBRARIES})
add_executable ( knxmysqltrace knxmysqltrace.c eiblog.c knxlog.c)
add_executable ( knxwebbridge knxwebbridge.c eiblog.c knxlog.c)

add_executable ( knxmon knxmon.c eiblog.c knxlog.c myxml.c)
add_executable ( knxmondump knxmondump.c eiblog.c knxlog.c myxml.c)
add_executable ( knxmoncompile knxmoncompile.c myxml.c)
add_executable ( knxtrace knxtrace.c eiblog.c knxlog.c)
add_executable ( knxprogadr knxprogadr.c eiblog.c knxlog.c)
add_executable ( knxsim knxsim.c eiblog.c knxlog.c)
add_executable ( hdllogic hdllogic.c eiblog.c knxlog.c)

add_executable ( hdlsolar hdlsolar.c eiblog.c knxlog.c)
add_executable ( hdlpellet hdlpellet.c eiblog.c knxlog.c)
add_executable ( hdlheatpump hdlheatpump.c eiblog.c knxlog.c)
add_executable ( hdlheater hdlheater.c eiblog.c knxlog.c)
add_executable ( hdlheating hdlheating.c eiblog.c knxlog.c)
add_executable ( hdlshades hdlshades.c eiblog.c knxlog.c)
add_executable ( hdltime hdltime.c eiblog.c knxlog.c)
add_executable ( hdltimer hdltimer.c eiblog.c knxlog.c)
add_executable ( hdlemh hdlemh.c eiblog.c knxlog.c)
add_executable ( hdltempmon hdltempmon.c eiblog.c knxlog.c)

add_executable ( sendb1 sendb1.c eiblog.c knxlog.c)
add_executable ( sendi8 sendi8.c eiblog.c knxlog.c)
add_executable ( sendu8 sendu8.c eiblog.c knxlog.c)
add_executable ( sendu16 sendu16.c eiblog.c knxlog.c)
add_executable ( sendf16 sendf16.c eiblog.c knxlog.c)
add_executable ( sendtime sendtime.c eiblog.c knxlog.c)
add_executable ( eibconvaddr eibconvaddr.c eiblog.c knxlog.c)

target_link_libraries ( knxbackbone LINK_PUBLIC m eibknxlib ${MariaDBClient_LIBRARIES})
target_link_libraries ( knxps LINK_PUBLIC m eibknxlib ${MariaDBClient_LIBRARIES})
target_link_libraries ( knxkill LINK_PUBLIC m eibknxlib ${MariaDBClient_LIBRARIES})
target_link_libraries ( knxtpbridge LINK_PUBLIC m eibknxlib ${MariaDBClient_LIBRARIES})
target_link_libraries ( knxipbridge LINK_PUBLIC m eibknxlib)
target_link_libraries ( knxmqttbridge LINK_PUBLIC m eibknxlib)
target_link_libraries ( knxmqttbridge2 LINK_PUBLIC m eibknxlib ${MOSQUITTO_LIBRARIES})
target_link_libraries ( knxmysqltrace LINK_PUBLIC m eibknxlib ${MariaDBClient_LIBRARIES})
target_link_libraries ( knxwebbridge LINK_PUBLIC m crypto eibknxlib)

target_link_libraries ( knxmon LINK_PUBLIC m xml2 eibknxlib ${MariaDBClient_LIBRARIES})
target_link_libraries ( knxmondump LINK_PUBLIC m xml2 eibknxlib ${MariaDBClient_LIBRARIES})
target_link_libraries ( knxmoncompile LINK_PUBLIC m xml2 eibknxlib ${MariaDBClient_LIBRARIES})
target_link_libraries ( knxtrace LINK_PUBLIC m eibknxlib ${MariaDBClient_LIBRARIES})
target_link_libraries ( knxprogadr LINK_PUBLIC m eibknxlib)
target_link_libraries ( knxsim LINK_PUBLIC m eibknxlib)
target_link_libraries ( hdllogic LINK_PUBLIC m eibknxlib ${MariaDBClient_LIBRARIES})

target_link_libraries ( hdlsolar LINK_PUBLIC m eibknxlib)
target_link_libraries ( hdlpellet LINK_PUBLIC m eibknxlib)
target_link_libraries ( hdlheatpump LINK_PUBLIC m eibknxlib)
target_link_libraries ( hdlheater LINK_PUBLIC m eibknxlib)
target_link_libraries ( hdlheating LINK_PUBLIC m eibknxlib)
target_link_libraries ( hdlshades LINK_PUBLIC m eibknxlib ${MOSQUITTO_LIBRARIES})
target_link_libraries ( hdltime LINK_PUBLIC m eibknxlib)
target_link_libraries ( hdltimer LINK_PUBLIC m eibknxlib)
target_link_libraries ( hdlemh LINK_PUBLIC m eibknxlib ${MariaDBClient_LIBRARIES})
target_link_libraries ( hdltempmon LINK_PUBLIC m eibknxlib ${MariaDBClient_LIBRARIES})

target_link_libraries ( sendb1 LINK_PUBLIC m eibknxlib)
target_link_libraries ( sendi8 LINK_PUBLIC m eibknxlib)
target_link_libraries ( sendu8 LINK_PUBLIC m eibknxlib)
target_link_libraries ( sendu16 LINK_PUBLIC m eibknxlib)
target_link_libraries ( sendf16 LINK_PUBLIC m eibknxlib)
target_link_libraries ( sendtime LINK_PUBLIC m eibknxlib)
target_link_libraries ( eibconvaddr LINK_PUBLIC m eibknxlib)

install( TARGETS knxbackbone RUNTIME DESTINATION /usr/bin LIBRARY DESTINATION /usr/lib PERMISSIONS SETUID)
install( TARGETS knxps RUNTIME DESTINATION /usr/bin LIBRARY DESTINATION /usr/lib PERMISSIONS SETUID)
install( TARGETS knxkill RUNTIME DESTINATION /usr/bin LIBRARY DESTINATION /usr/lib PERMISSIONS SETUID)
install( TARGETS knxtpbridge RUNTIME DESTINATION /usr/bin LIBRARY DESTINATION /usr/lib PERMISSIONS SETUID)
install( TARGETS knxipbridge RUNTIME DESTINATION /usr/bin LIBRARY DESTINATION /usr/lib PERMISSIONS SETUID)
install( TARGETS knxmqttbridge RUNTIME DESTINATION /usr/bin LIBRARY DESTINATION /usr/lib PERMISSIONS SETUID)
install( TARGETS knxmysqltrace RUNTIME DESTINATION /usr/bin LIBRARY DESTINATION /usr/lib PERMISSIONS SETUID)
install( TARGETS knxwebbridge RUNTIME DESTINATION /usr/bin LIBRARY DESTINATION /usr/lib PERMISSIONS SETUID)
install( TARGETS knxmon RUNTIME DESTINATION /usr/bin LIBRARY DESTINATION /usr/lib PERMISSIONS SETUID)
install( TARGETS knxmondump RUNTIME DESTINATION /usr/bin LIBRARY DESTINATION /usr/lib PERMISSIONS SETUID)
install( TARGETS knxmoncompile RUNTIME DESTINATION /usr/bin LIBRARY DESTINATION /usr/lib PERMISSIONS SETUID)
install( TARGETS knxtrace RUNTIME DESTINATION /usr/bin LIBRARY DESTINATION /usr/lib PERMISSIONS SETUID)
install( TARGETS hdllogic RUNTIME DESTINATION /usr/bin LIBRARY DESTINATION /usr/lib PERMISSIONS SETUID)

install( TARGETS hdlpellet RUNTIME DESTINATION /usr/bin LIBRARY DESTINATION /usr/lib PERMISSIONS SETUID)
install( TARGETS hdlheatpump RUNTIME DESTINATION /usr/bin LIBRARY DESTINATION /usr/lib PERMISSIONS SETUID)
install( TARGETS hdlheater RUNTIME DESTINATION /usr/bin LIBRARY DESTINATION /usr/lib PERMISSIONS SETUID)
install( TARGETS hdlheating RUNTIME DESTINATION /usr/bin LIBRARY DESTINATION /usr/lib PERMISSIONS SETUID)
install( TARGETS hdlshades RUNTIME DESTINATION /usr/bin LIBRARY DESTINATION /usr/lib PERMISSIONS SETUID)
install( TARGETS hdltime RUNTIME DESTINATION /usr/bin LIBRARY DESTINATION /usr/lib PERMISSIONS SETUID)
install( TARGETS hdlsolar RUNTIME DESTINATION /usr/bin LIBRARY DESTINATION /usr/lib PERMISSIONS SETUID)
install( TARGETS hdltimer RUNTIME DESTINATION /usr/bin LIBRARY DESTINATION /usr/lib PERMISSIONS SETUID)
install( TARGETS hdlemh RUNTIME DESTINATION /usr/bin LIBRARY DESTINATION /usr/lib PERMISSIONS SETUID)
install( TARGETS hdltempmon RUNTIME DESTINATION /usr/bin LIBRARY DESTINATION /usr/lib PERMISSIONS SETUID)

install( TARGETS sendb1 RUNTIME DESTINATION /usr/bin LIBRARY DESTINATION /usr/lib PERMISSIONS SETUID)
install( TARGETS sendi8 RUNTIME DESTINATION /usr/bin LIBRARY DESTINATION /usr/lib PERMISSIONS SETUID)
install( TARGETS sendu8 RUNTIME DESTINATION /usr/bin LIBRARY DESTINATION /usr/lib PERMISSIONS SETUID)
install( TARGETS sendu16 RUNTIME DESTINATION /usr/bin LIBRARY DESTINATION /usr/lib PERMISSIONS SETUID)
install( TARGETS sendf16 RUNTIME DESTINATION /usr/bin LIBRARY DESTINATION /usr/lib PERMISSIONS SETUID)
install( TARGETS sendtime RUNTIME DESTINATION /usr/bin LIBRARY DESTINATION /usr/lib PERMISSIONS SETUID)
install( TARGETS eibconvaddr RUNTIME DESTINATION /usr/bin LIBRARY DESTINATION /usr/lib PERMISSIONS SETUID)
